--- a/app/src/main/res/layout/fragment_add_edit_plant.xml
+++ b/app/src/main/res/layout/fragment_add_edit_plant.xml
@@ -18,7 +18,6 @@
             android:backgroundTint="@color/white"
             app:cardCornerRadius="8dp"
             app:cardElevation="5sp"
-
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -81,7 +80,7 @@
                 <ListView
                     android:id="@+id/list_view_gpio_select"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="wrap_content"
                     android:backgroundTint="@color/lb_browse_header_color"
                     tools:listitem="@layout/list_item_gpio"/>
 
