--- a/app/src/main/res/layout/list_item_gpio.xml
+++ b/app/src/main/res/layout/list_item_gpio.xml
@@ -44,7 +44,7 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:background="@color/gpio_background"
         android:padding="8dp"
 
         app:layout_constraintBottom_toBottomOf="parent"
