--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,8 +23,13 @@
     <color name="text_primary_dark">#F2FFFFFF</color>
     <color name="text_secondary_dark">#8AFFFFFF</color>
 
-    <color name="gpio_orange">#F4a641</color>
-    <color name="gpio_red">#E76451</color>
+    <color name="gpio_background">#353535</color>
+    <!--   <color name="gpio_orange">#F4a641</color>
+       <color name="gpio_red">#E76451</color>
+       <color name="gpio_brown">#664c43</color>
+       <color name="gpio_yellow">#FF5722</color>-->
+    <color name="gpio_orange">#F77F00</color>
+    <color name="gpio_red">#D62828</color>
     <color name="gpio_brown">#664c43</color>
     <color name="gpio_yellow">#FF5722</color>
     <color name="arduino_turquise">#2A9d8f</color>
