--- a/app/src/main/res/layout/fragment_add_edit_plant.xml
+++ b/app/src/main/res/layout/fragment_add_edit_plant.xml
@@ -1,124 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/darker_gray"
+    tools:context=".component.plant.AddEditPlantFragment">
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/edit_text_list_item_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".component.plant.AddEditPlantFragment"
-        android:background="@android:color/darker_gray">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:backgroundTint="@color/white"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="5sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/edit_text_list_item_container"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:backgroundTint="@color/white"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="5sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:orientation="vertical"
+            android:padding="8dp">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="8dp">
+                android:background="@drawable/edit_text_custom"
+                android:orientation="vertical">
 
 
-                <LinearLayout
+                <EditText
+                    android:id="@+id/edit_text_add_edit_plant_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/edit_text_custom"
-                    android:orientation="vertical">
-
-
-                    <EditText
-                        android:id="@+id/edit_text_add_edit_plant_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Name"
-                        android:inputType="text" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:background="@drawable/edit_text_custom"
-                    android:orientation="vertical">
-
-
-                    <EditText
-                        android:id="@+id/edit_text_add_edit_plant_info"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Info"
-                        android:inputType="textMultiLine" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:background="@drawable/edit_text_custom"
-                    android:orientation="vertical">
-
-
-                    <EditText
-                        android:id="@+id/edit_text_add_edit_plant_gpio"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="1"
-                        android:inputType="number" />
-
-                </LinearLayout>
-
-                <ListView
-                    android:id="@+id/list_view_gpio_select"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/lb_browse_header_color"
-                    tools:listitem="@layout/list_item_gpio"/>
-
-                <Button
-                    android:id="@+id/button_save_add_edit_element"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="save" />
+                    android:hint="Name"
+                    android:inputType="text" />
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <LinearLayout
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/edit_text_custom"
+                android:orientation="vertical">
+
+
+                <EditText
+                    android:id="@+id/edit_text_add_edit_plant_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Info"
+                    android:inputType="textMultiLine" />
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_gpio_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="8dp"
+        android:backgroundTint="@color/white"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="5sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_list_item_container">
+
+        <ListView
+            android:id="@+id/list_view_gpio_select"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_text_list_item_container">
+            android:layout_marginBottom="8dp"
+            android:backgroundTint="@color/lb_browse_header_color"
+            tools:listitem="@layout/list_item_gpio" />
+    </androidx.cardview.widget.CardView>
 
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/button_comparing_element_add_image"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="16dp"
-                android:padding="16dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_outline_add_photo_alternate_24px"
-                app:cornerRadius="@dimen/material_corner_radius"
-                android:layout_marginStart="16dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_view_gpio_list_view">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view_comparing_element_images"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:scrollbars="horizontal" />
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/button_comparing_element_add_image"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:padding="16dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_outline_add_photo_alternate_24px"
+            app:cornerRadius="@dimen/material_corner_radius" />
 
-        </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_comparing_element_images"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:scrollbars="horizontal" />
+
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_save_add_edit_element"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/primary_green"
+        android:clickable="true"
+        android:contentDescription="Save"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@drawable/icon_disk" />
+</androidx.constraintlayout.widget.ConstraintLayout>
