--- a/app/src/main/res/layout/fragment_add_edit_plant.xml
+++ b/app/src/main/res/layout/fragment_add_edit_plant.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@android:color/darker_gray"
     tools:context=".component.plant.AddEditPlantFragment">
 
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
@@ -21,6 +22,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,6 +61,32 @@
                     android:hint="Info"
                     android:inputType="textMultiLine" />
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/card_view_gpio_list_view">
+
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/button_comparing_element_add_image"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_outline_add_photo_alternate_24px" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_view_comparing_element_images"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:scrollbars="horizontal" />
+
+            </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -67,8 +95,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
         app:cardElevation="5sp"
@@ -77,7 +106,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_text_list_item_container">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_view_gpio_select"
+            android:id="@+id/recycler_view_gpio_select"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -85,36 +114,6 @@
             android:backgroundTint="@color/lb_browse_header_color"
             tools:listitem="@layout/list_item_gpio" />
     </androidx.cardview.widget.CardView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card_view_gpio_list_view">
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/button_comparing_element_add_image"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:padding="16dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_outline_add_photo_alternate_24px"
-            app:cornerRadius="@dimen/material_corner_radius" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_comparing_element_images"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:scrollbars="horizontal" />
-
-    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_save_add_edit_element"
@@ -129,5 +128,5 @@
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/icon_disk" />
+        app:srcCompat="@drawable/ic_baseline_save_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
