--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.RPICommunicator_V1" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.RPICommunicator_V1" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_green</item>
         <item name="colorPrimaryVariant">@color/primary_green_darker</item>
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/primary_green</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@android:color/darker_gray</item>
+        <item name="android:statusBarColor">@android:color/darker_gray</item>
         <!-- Customize your theme here. -->
         <item name="android:textColorHint">@color/red</item>
     </style>
