--- a/app/src/main/res/layout/fragment_add_edit_comp_element.xml
+++ b/app/src/main/res/layout/fragment_add_edit_comp_element.xml
@@ -72,11 +72,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"></NumberPicker>
 
-            <Button
-                android:id="@+id/button_save_comp_elem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="save" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <LinearLayout
@@ -109,4 +104,18 @@
             android:scrollbars="horizontal" />
 
     </LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_save_comp_elem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/primary_green"
+        android:clickable="true"
+        android:contentDescription="Save"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@drawable/ic_baseline_save_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
