--- a/app/src/main/res/layout/fragment_comparing_element_overview.xml
+++ b/app/src/main/res/layout/fragment_comparing_element_overview.xml
@@ -5,8 +5,7 @@
     android:id="@+id/coordinator_layout_element"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
-    tools:context=".component.comparing.secondlevel.ComparingElementActivity">
+    android:background="@android:color/darker_gray">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_comp_elem"
@@ -18,8 +17,14 @@
         android:id="@+id/button_add_comp_elem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/primary_green"
+        android:clickable="true"
         android:layout_gravity="bottom|end"
-        android:layout_margin="32dp"
-        android:src="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:focusable="true"
+        android:contentDescription="Settings" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
