--- a/app/src/main/res/layout/list_item_gpio_rpi.xml
+++ b/app/src/main/res/layout/list_item_gpio_rpi.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/text_view_label_left"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:clickable="true"
@@ -21,6 +21,8 @@
         android:textAlignment="gravity"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
 
         app:layout_constraintEnd_toStartOf="@+id/image_view_icon_left"
         app:layout_constraintHorizontal_bias="0.5"
@@ -32,7 +34,7 @@
         android:id="@+id/image_view_icon_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:background="@color/gpio_background"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/image_view_icon_right"
@@ -40,31 +42,33 @@
         app:layout_constraintStart_toEndOf="@+id/text_view_label_left"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/gpio_symbol"
-        app:tint="@color/red" />
+        /><!--app:tint="@color/red" />-->
 
     <ImageView
         android:id="@+id/image_view_icon_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/gpio_background"
-        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text_view_label_right"
         app:layout_constraintHorizontal_bias="0.5"
+        android:padding="8dp"
         app:layout_constraintStart_toEndOf="@+id/image_view_icon_left"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/gpio_symbol"
-        app:tint="@color/red" />
+        />
 
     <TextView
         android:id="@+id/text_view_label_right"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:clickable="true"
         android:focusable="true"
         android:gravity="left"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:text="5V"
         android:textAlignment="gravity"
         android:textSize="20sp"
