--- a/app/src/main/res/layout/fragment_add_edit_comp_element.xml
+++ b/app/src/main/res/layout/fragment_add_edit_comp_element.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
-    tools:context=".component.comparing.secondlevel.AddElementActivity">
-
+    android:background="@android:color/darker_gray">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/edit_text_list_comp_elem"
@@ -14,7 +11,6 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
         app:cardElevation="5sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +66,7 @@
             <NumberPicker
                 android:id="@+id/number_picker_priority"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"></NumberPicker>
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -100,8 +96,7 @@
             android:id="@+id/recycler_view_comp_elem_images"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:scrollbars="horizontal" />
+            android:layout_weight="1"/>
 
     </LinearLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -112,7 +107,6 @@
         android:layout_marginBottom="16dp"
         android:layout_weight="1"
         android:backgroundTint="@color/primary_green"
-        android:clickable="true"
         android:contentDescription="Save"
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
