--- a/app/src/main/res/layout/fragment_add_edit_plant.xml
+++ b/app/src/main/res/layout/fragment_add_edit_plant.xml
@@ -79,8 +79,8 @@
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_margin="8dp"
                         android:layout_gravity="center_vertical"
+                        android:layout_margin="8dp"
                         android:scaleType="fitCenter"
                         android:src="@drawable/ic_outline_add_photo_alternate_24px" />
                 </LinearLayout>
@@ -107,18 +107,37 @@
         android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
         app:cardElevation="5sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_list_item_container">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_gpio_select"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:backgroundTint="@color/lb_browse_header_color"
-            tools:listitem="@layout/list_item_gpio_rpi" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:background="@drawable/edit_text_custom">
+
+                <Spinner
+                    android:id="@+id/spinner_device"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </FrameLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_gpio_select"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:backgroundTint="@color/lb_browse_header_color"
+                tools:listitem="@layout/list_item_gpio_rpi" />
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
