--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
+    android:background="@color/background_color"
     tools:context=".component.general.SettingsActivity">
 
 
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
         app:cardElevation="5sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewSources"
@@ -53,7 +52,6 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="4dp"
-                    android:backgroundTint="@android:color/white"
                     android:ems="10"
                     android:hint="Default IP"
                     android:importantForAutofill="no"
@@ -79,7 +77,6 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="4dp"
-                    android:backgroundTint="@android:color/white"
                     android:ems="10"
                     android:hint="Port"
                     android:importantForAutofill="no"
@@ -115,7 +112,6 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="4dp"
-                    android:backgroundTint="@android:color/white"
                     android:ems="10"
                     android:hint="Default IP"
                     android:importantForAutofill="no"
@@ -141,7 +137,6 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="4dp"
-                    android:backgroundTint="@android:color/white"
                     android:ems="10"
                     android:hint="Port"
                     android:importantForAutofill="no"
@@ -201,7 +196,6 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="4dp"
-                    android:backgroundTint="@android:color/white"
                     android:ems="10"
                     android:hint="Name"
                     android:importantForAutofill="no"
@@ -219,7 +213,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:backgroundTint="@color/white"
         android:padding="8dp"
         android:visibility="gone"
         app:cardCornerRadius="8dp"
