--- a/app/src/main/res/layout/fragment_plant_detail.xml
+++ b/app/src/main/res/layout/fragment_plant_detail.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
+    android:background="@color/background_color"
     android:fitsSystemWindows="true"
     tools:context=".component.plant.PlantDetailFragment">
 
@@ -14,17 +14,16 @@
         android:id="@+id/app_bar_layout_plant_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:background="@color/background_color">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar_plant_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:background="@android:color/darker_gray"
+            android:background="@color/background_color"
             android:fitsSystemWindows="true"
-            app:contentScrim="@android:color/darker_gray"
+            app:contentScrim="@color/background_color"
             app:expandedTitleTextAppearance="@android:color/transparent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
@@ -66,7 +65,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="16dp"
-            android:backgroundTint="@color/white"
             app:cardCornerRadius="8dp"
             card_view:cardElevation="5sp">
 
