--- a/app/src/main/res/layout/fragment_add_edit_comp_element.xml
+++ b/app/src/main/res/layout/fragment_add_edit_comp_element.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray">
+    android:background="@color/background_color">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/edit_text_list_comp_elem"
