--- a/app/src/main/res/layout/fragment_comparing_element_overview.xml
+++ b/app/src/main/res/layout/fragment_comparing_element_overview.xml
@@ -5,7 +5,7 @@
     android:id="@+id/coordinator_layout_element"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray">
+    android:background="@color/background_color">
         
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_comp_elem"
