--- a/app/src/main/res/layout/fragment_plant_overview.xml
+++ b/app/src/main/res/layout/fragment_plant_overview.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
+    android:background="@color/background_color"
     tools:context=".component.plant.PlantOverviewFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -13,7 +13,6 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:backgroundTint="@color/design_default_color_error"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +24,6 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:backgroundTint="@color/design_default_color_on_primary"
             android:scrollbars="vertical"
             tools:listitem="@layout/list_item_image" />
 
