--- a/app/src/main/res/layout/list_item_gpio_rpi.xml
+++ b/app/src/main/res/layout/list_item_gpio_rpi.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/rpi_default_green"
     android:orientation="horizontal">
 
     <TextView
@@ -17,12 +14,12 @@
         android:clickable="true"
         android:focusable="true"
         android:gravity="right"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:text="3,3V"
         android:textAlignment="gravity"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
 
         app:layout_constraintEnd_toStartOf="@+id/image_view_icon_left"
         app:layout_constraintHorizontal_bias="0.5"
@@ -41,22 +38,20 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/text_view_label_left"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/gpio_symbol"
-        /><!--app:tint="@color/red" />-->
+        app:srcCompat="@drawable/gpio_symbol" /><!--app:tint="@color/red" />-->
 
     <ImageView
         android:id="@+id/image_view_icon_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/gpio_background"
+        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text_view_label_right"
         app:layout_constraintHorizontal_bias="0.5"
-        android:padding="8dp"
         app:layout_constraintStart_toEndOf="@+id/image_view_icon_left"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/gpio_symbol"
-        />
+        app:srcCompat="@drawable/gpio_symbol" />
 
     <TextView
         android:id="@+id/text_view_label_right"
