--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,17 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.RPICommunicator_V1" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.RPICommunicator_V1" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_green</item>
         <item name="colorPrimaryVariant">@color/primary_green_darker</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/light_grey</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/medium_green_palette</item>
         <item name="colorSecondaryVariant">@color/primary_green</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@android:color/darker_gray</item>
+        <item name="android:statusBarColor">@android:color/darker_gray</item>
         <!-- Customize your theme here. -->
+        <item name="android:textColorHint">@color/red</item>
     </style>
 
     <style name="Theme.RPICommunicator_V1.NoActionBar">
@@ -22,7 +23,6 @@
     <style name="ThemeOverlay.AppCompat.Dark.ActionBar" >
         <item name="windowActionBar">false</item>
         <item name="elevation">0dp</item>
-
     </style>
 
 </resources>
